--- a/09-CSS-Positioning/homework/homework.html
+++ b/09-CSS-Positioning/homework/homework.html
@@ -17,6 +17,10 @@
           Debes usar las clases, ids y selectores de elemnto que usaste en la tarea número 2.
       </span>
     </div>
+
+
+
+
     <div class="container">
       <h3>Ejercicio 1:</h3>
       <span id="ejercicioUno">
@@ -31,15 +35,15 @@
     <div class="container">
       <h3>Ejercicio 2:</h3>
       <span>
-         Hay una caja con un texto en la parte superior de la pantalla. Eso se supone que es un "placeholder" hasta que tengamos el título de la sección definido. Desafortunadamente no tenemos acceso
-         al HTML, por lo que no podemos ocultarlo modificando el HTML. Usando sólo CSS, asegúrate que la caja no
+         Hay una caja con un texto en la parte superior de la pantalla. Eso se supone que es un "placeholder" hasta que tengamos el título de la sección definido.
+          Desafortunadamente no tenemos acceso al HTML, por lo que no podemos ocultarlo modificando el HTML. Usando sólo CSS, asegúrate que la caja no
          sea mostrada. El id de lo que tenes que ocultar es "ejercicioDos".
       </span>
     </div>
     <div class="container">
       <h3>Ejercicio 3:</h3>
       <span>
-          Debajo verás una caja, la cual contiene adentro una imagen, nos queremos asegurar que esa imagen se
+          Debajo verás una caja, la cual contiene dentro una imagen, nos queremos asegurar que esa imagen se
           posicione dentro de la cajita roja. Debes cambiar el atributo "position", y después ajustar la imagen acorde a la caja.
           La caja roja está a 100 píxeles del margen superior y 200 píxeles desde la izquierda. El id de la imagen en "ejercicioTres".
       </span>
@@ -93,10 +97,10 @@
       </span>
     </div>
     <div id="ejercicioSiete">
-      <div id="elementoUno" class="elementos"><span class="textoElemento">Id "elementoUno"</span></div>
-      <div id="elementoDos" class="elementos"><span class="textoElemento">Id "elementoDos"</span></div>
-      <div id="elementoTres" class="elementos"><span class="textoElemento">Id "elementoTres"</span></div>
-      <div id="elementoCuatro" class="elementos"><span class="textoElemento">Id "elementoCuatro"</span></div>
+      <div id="elementoUno" class="elementos"><span class="textoElemento">"Elemento Uno"</span></div>
+      <div id="elementoDos" class="elementos"><span class="textoElemento">"Elemento Dos"</span></div>
+      <div id="elementoTres" class="elementos"><span class="textoElemento">"Elemento Tres"</span></div>
+      <div id="elementoCuatro" class="elementos"><span class="textoElemento">"Elemento Cuatro"</span></div>
     </div>
     <div class="container">
       <h3>Punto extra 1:</h3>
@@ -117,5 +121,20 @@
           Además, de los creadores de "Flexbox Froggy" llega <a href="http://cssgridgarden.com/">CSS GridGarden</a>.
       </span>
     </div>
+
+    <div class="firma">
+      <p>
+        HENRY - Prep Course 
+      </p>
+
+    </div>
+
+
   </body>
 </html>
+
+
+
+
+
+// }
